make players refresh when a player is added

--- a/templates/pod.html
+++ b/templates/pod.html
@@ -1,5 +1,5 @@
 <div ng-controller="podCtrl">
-    <h1>{{pod.short_code}}</h1>
+    <h1>POD {{pod.short_code}}</h1>
     Some <b>{{pod.format}}</b> Magic will be happening at <b>{{pod.start_time}}</b> in <b>{{pod.location}}</b> if we can get <b>{{pod.min_players}} - {{pod.max_players}}</b> players committed before <b>{{pod.cutoff_time}}</b>
     <br/>
     <form name="signupForm">
