add style updates to pod page

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
                     </md-input-container>
                 </div>
                 <div>
-                    <md-button type="submit" ng-click="makePod()">Submit</md-button>
+                    <md-button type="submit" ng-click="makePod()" class="md-primary md-raised">Submit</md-button>
                 </div>
 
             </form>
