--- a/templates/pod.html
+++ b/templates/pod.html
@@ -20,8 +20,8 @@
     <h2>Current Players:</h2>
     <div class="gridListdemoDynamicTiles">
         <md-grid-list
-                md-cols="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="6"
-                md-row-height-gt-md="1:" md-row-height="4:3"
+                md-cols="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="8"
+                md-row-height-gt-md="1:1" md-row-height="4:3"
                 md-gutter="8px" md-gutter-gt-sm="4px" >
 
             <md-grid-tile ng-repeat="tile in playerTiles"
